[project]
name = "fintrack"
version = "0.1.0"
description = "Keeping track of my finances"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pwdlib[argon2]>=0.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.taskipy.tasks]
pre_format = "ruff check --fix"
format = "ruff format"
run = "fastapi dev fintrack/app.py"
pre_test = "ruff check"
test = "pytest -s -x --cov=fintrack -vv"
post_test = "coverage html"
